# OPENAI-AGENT

./: README.md  main.py  ocr_response.md  pyproject.toml
modules/01_asses/: main.py
modules/01_asses/tools/: broadcast.py  laptop_gaming_recomendation.py  laptop_recomendation.py
modules/02_agent/: main.py
modules/03_ocr/: main.py
modules/04_vector/: main.py
